# game-of-life-wgpu

./: Cargo.toml  README.md  appconfig.toml  index.html  index.js  styles.css  wasm_build.sh
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
.helix/: languages.toml
scripts/: install_hooks.sh  launch_browser_linux.sh  pre_commit.sh  run_server.sh
shaders/: compute.wgsl  shader.wgsl
src/: app.rs  buffers.rs  compute.rs  config.rs  constants.rs  game_data.rs  game_state.rs  gpu_resources.rs  graphics.rs  lib.rs  main.rs  mouse_handler.rs  paint.rs  pipeline.rs  render.rs  render_data.rs  resources.rs  shader_vert.wgsl  uniforms.rs  vertex.rs  web_controls.rs
src/shaders/: compute.wgsl  paint.wgsl  paint_merge.wgsl  render.wgsl  shader.wgsl
