[package]
name = "game-of-life"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.1", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
pollster = "0.4.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
wgpu = "26.0.1"
winit = { version = "0.30.11", features = ["android-native-activity"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

